--- a/Index.html
+++ b/Index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<header>
-    <h1>TiroLaiseca.com </h1>
-    <img src="http://www.gifs-animados.es/games-imagenes/games-imagenes/angry-birds/gifs-animados-angry-birds-142079.gif">
-</header>
 <head>
+    <link rel="stylesheet" href="css1.css" type="text/css">
     <meta charset="UTF-8">
-    <title>TiroLaiseca</title>
 </head>
 <body>
-uuu
+                          <header>
+                              <title>Tiro Laiseca</title>
+                              <h1>Tiro Laiseca.com</h1>
+                              <div>
+                                  <img src="http://www.gifs-animados.es/games-imagenes/games-imagenes/angry-birds/gifs-animados-angry-birds-142079.gif">
+                              </div>
+
+</header>
+
+                          <input type="number" name="value" title="Velocidad Inicial">
+                          <br>
+                          <input type="number" name="value">
+                          <br>
+                          <input type="number" name="value">
+                          <br>
+                          <input type="number" name="value">
+                          <br>
+                          <input type="number" name="value">
+                          <br>
+                          <input type="number" name="value">
 </body>
+
 </html>
