--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,7 @@
 <header>
     <h1>Tiro Laiseca.com</h1>
     <br>
-    <link rel="icon" href="favicon-96x96.png" type="image/png" sizes="96x96"  >
+    <link rel="icon" href="favicon.ico" type="image/x-icon"  >
 </header>
 <ul>
     <li><a href="Index.html">Inicio </a></li>
