--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,7 @@
     <li><a href="https://github.com/nicoru1996">Contacto</a></li>
 </ul>
 <div align="right">
-    <input type="button" class="b" value="Calcular!" onclick="dibujar()""/">
+    <input type="button" class="b" value="Calcular!" onclick="dibujar()">
 </div>
 <br>
 <div class="sidebar">
