--- a/Index.html
+++ b/Index.html
@@ -42,7 +42,7 @@
             <div>
                 Altura Inicial
             </div>
-            <input type="number" name="AlturaInicial" class="t2" placeholder="Altura Inicial">
+            <input type="number" name="AlturaInicial" class="t2" placeholder="Altura Inicial" id="Altura Inicial">
             <select name="Unidades">
                 <option value="m">m</option>
                 <option value="Km">km</option>
@@ -163,7 +163,7 @@
 </div>
 <br>
 <div class="wrap">
-    <canvas id="canvas" width="1365" height="550"  style="background-color: lightskyblue">
+    <canvas id="canvas" width="1290" height="520"  style="background-color: lightskyblue">
 </div>
 <br>
 
