--- a/tutorial.html
+++ b/tutorial.html
@@ -7,9 +7,27 @@
 </head>
 <body>
 <h1>Tutorial</h1>
-
 <ul>
     <li><a href="index.html"> << volver </a></li>
 </ul>
+<br>
+<br>
+<div class="manual">
+    <b>
+        La función de Tirolaiseca es resolver ejercicios de Tiro Oblicuo, de acuerdo a los datos del problema. <br>
+        1- Busque en su problema los datos que tenga y los que quiere calcular. <br>
+        2- Complete las cajas correspondientes con los datos.<br>
+        3- Oprima Calcular!<br>
+        4-El sistema generará el grafico en base a los datos <br>
+        5-Puede alterar los datos y volver a oprimir Calcular para observar otros resultados!
+    </b>
+    <br>
+    <br>
+    <input type="button" class="rb" value="Me Rindo.." onclick="window.location.href='http://9gag.com/'">
+    <input type="button" class="b" value="A Calcular!" onclick="window.location.href='index.html'">
+    <br>
+
+</div>
+
 </body>
 </html>
