--- a/Index.html
+++ b/Index.html
@@ -110,9 +110,9 @@
             </div>
             <br>
             <div>
-                Velocidad
+                Velocidad (h max)
             </div>
-            <input type="number" name="Velocidad" class="t2" placeholder="Velocidad">
+            <input type="number" name="Velocidad" class="t2" placeholder="Velocidad" id="Velymax">
             <select name="Unidades">
                 <option value="m/s">m/s</option>
                 <option value="Km/h">km/h</option>
@@ -122,7 +122,7 @@
             <div>
                 Altura
             </div>
-            <input type="number" name="Altura" class="t2" placeholder="Altura">
+            <input type="number" name="Altura" class="t2" placeholder="Altura" id="hcal">
             <select name="Unidades">
                 <option value="m">m</option>
                 <option value="Km">km</option>
@@ -132,7 +132,7 @@
             <div>
                 Distancia
             </div>
-            <input type="number" name="Distancia" class="t2" placeholder="Distancia">
+            <input type="number" name="Distancia" class="t2" placeholder="Distancia" id="distcal">
             <select name="Unidades">
                 <option value="m">m</option>
                 <option value="Km">km</option>
@@ -143,7 +143,7 @@
                 <div>
                     Tiempo
                 </div>
-                <input type="number" name="Tiempo" class="t2" placeholder="Tiempo">
+                <input type="number" name="Tiempo" class="t2" placeholder="Tiempo" id="tiemcal">
                 <select name="Unidades">
                     <option value="seg">seg</option>
                     <option value="min">min</option>
@@ -154,7 +154,7 @@
             <div>
                 Ángulo
             </div>
-            <input type="number" name="Ángulo" class="t2" placeholder="Ángulo">
+            <input type="number" name="Ángulo" class="t2" placeholder="Ángulo" id="angcal">
             <select name="Unidades">
                 <option value="deg">deg</option>
                 <option value="rad">rad</option>
