--- a/Index.html
+++ b/Index.html
@@ -2,16 +2,22 @@
 <html lang="en">
 
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+
     <link rel="stylesheet" href="css1.css" type="text/css">
     <script type="text/javascript" src="calculo.js"></script>
     <meta charset="UTF-8">
-    <title>Tiro Laiseca</title>
+    <title>TiroLaiseca.com</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon"  >
 </head>
 <body>
 <header>
+    <div class="jumbotron text-center">
     <h1>Tiro Laiseca.com</h1>
     <br>
-    <link rel="icon" href="favicon.ico" type="image/x-icon"  >
+        </div>
 </header>
 <ul>
     <li><a href="Index.html">Inicio </a></li>
