--- a/Index.html
+++ b/Index.html
@@ -72,7 +72,7 @@
                 Altura Máxima
             </div>
             <input type="number" name="altmax" class="t2" placeholder="Altura Máxima" id="altmax">
-            <select name="Unidades">
+            <select name="Unidades" id="uhm">
                 <option value="m">m</option>
                 <option value="Km">km</option>
             </select>
@@ -82,7 +82,7 @@
                 Distancia del máximo
             </div>
             <input type="number" name="disthmax" class="t2" placeholder="Distancia del máximo" id="disthmax">
-            <select name="Unidades">
+            <select name="Unidades" id="udm">
                 <option value="m">m</option>
                 <option value="Km">km</option>
             </select>
@@ -92,7 +92,7 @@
                 Distancia Total
             </div>
             <input type="number" id="DistanciaFinal" name="DistanciaFinal" class="t2" placeholder="Distancia Final">
-            <select name="Unidades">
+            <select name="Unidades" id="udt">
                 <option value="m">m</option>
                 <option value="Km">km</option>
             </select>
@@ -102,7 +102,7 @@
                 Tiempo hasta el máximo
             </div>
             <input type="number" id="tiemhmax" name="tiemhmax" class="t2" placeholder="Tiempo hasta el máximo" >
-            <select name="Unidades">
+            <select name="Unidades" id="utm">
                 <option value="seg">seg</option>
                 <option value="min">min</option>
             </select>
@@ -112,7 +112,7 @@
                 Tiempo de vuelo
             </div>
             <input type="number" id="Tiempovuelo" name="Tiempovuelo" class="t2" placeholder="Tiempo de vuelo">
-            <select name="Unidades">
+            <select name="Unidades" id="utv">
                 <option value="seg">seg</option>
                 <option value="min">min</option>
             </select>
@@ -120,7 +120,7 @@
     </form>
 </div>
 <div class="wrap">
-    <canvas id="canvas" width="1300" height="580px"  style="background-color:#1b85c9">
+    <canvas id="canvas" width="1300" height="600px"  style="background-color:#1b85c9">
 </div>
 
 </html>
